--- a/Project/src/main/resources/admintools/admin_tools_application_setting.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_application_setting.fxml
@@ -2,23 +2,13 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Tab?>
+<?import com.jfoenix.controls.JFXToggleButton?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATAS">
    <children>
       <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
@@ -121,6 +111,43 @@
                                  </children>
                               </GridPane>
                           </content>
+                        </Tab>
+                        <Tab style="-fx-background-color: #015080;" text="Doctor Wong Special">
+                           <content>
+                              <GridPane style="-fx-background-color: #ffffff;">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" percentHeight="20.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                    <Text fill="#015080" strokeType="OUTSIDE" strokeWidth="0.0" text="Doctor Wong Special" GridPane.valignment="BOTTOM">
+                                       <font>
+                                          <Font name="System Bold" size="30.0" />
+                                       </font>
+                                       <GridPane.margin>
+                                          <Insets left="200.0" />
+                                       </GridPane.margin>
+                                    </Text>
+                                    <Text fill="#015080" strokeType="OUTSIDE" strokeWidth="0.0" text="Courtesy of Team D - We Had A Great Term" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                       <GridPane.margin>
+                                          <Insets left="200.0" />
+                                       </GridPane.margin>
+                                    </Text>
+                                    <JFXToggleButton fx:id="wongToggle" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Wong Finding" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="TOP" />
+                                 </children>
+                              </GridPane>
+                           </content>
                         </Tab>
                      </tabs>
                   </JFXTabPane>
