--- a/Project/src/main/resources/reservations/reservations_edit.fxml
+++ b/Project/src/main/resources/reservations/reservations_edit.fxml
@@ -31,9 +31,9 @@
                     <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#setBackButton" text="Go back to previous page" />
                   </items>
                 </Menu>
-                <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
+                <Menu fx:id="homeButton" mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="HOME" />
+                        <MenuItem text="HOME" />
                      </items>
                   </Menu>
               </menus>
