--- a/Project/src/main/resources/application/login_main.fxml
+++ b/Project/src/main/resources/application/login_main.fxml
@@ -112,7 +112,7 @@
                                     <Image url="@../pictures/BWH.JPG" />
                                  </image>
                               </ImageView>
-                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, edu.wpi.cs3733.d19.teamD.User!" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                              <Text fill="#090a0f" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, User!" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                                  <font>
                                     <Font name="System Bold Italic" size="48.0" />
                                  </font>
@@ -127,7 +127,7 @@
                                     <Font size="25.0" />
                                  </font>
                               </Text>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="edu.wpi.cs3733.d19.teamD.User's Username" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="User's Username" GridPane.columnIndex="1" GridPane.rowIndex="5">
                                  <font>
                                     <Font size="25.0" />
                                  </font>
